<resources>
    <string name="app_name">Reseller</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_account">createAccount</string>
    <string name="title_activity_in_stock">inStock</string>
    <string name="Reselling">  RESELLING</string>
    <string name="username"> Email or username</string>
    <string name="password"> Password</string>
    <string name="login"> Log in</string>
    <string name="Signup"> Don\'t have an account? Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm Password</string>
    <string name="title_activity_new_shoe">NewShoeActivity</string>
    <string name="style_code">Style Code</string>
    <string name="quantity">Quantity</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_size">Shoe size</string>
    <string name="shoe_price">Shoe price</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="portfolio">Portfolio</string>
    <string name="sold">Sold</string>
    <string name="Summary">Summary</string>
    <string name="Account">Account</string>
    <string name="title_activity_testing">Testing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
